# Recipe

./: .gitignore  CMakeLists.txt  README.md
docs/: implementation_plan.md
include/: Game.h  GameManager.h  recipe.h  recipe_manager.h
include(.h_file)/: recipe.h  recipe_manager.h
src/: main.cpp
src(.cpp_file)/: main.cpp
